--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-helmet-async": "^1.2.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.45.0",
     "styled-components": "^5.3.3",
+    "swiper": "^7.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
